# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  demo.cast  pyproject.toml
.github/workflows/: python-ci.yml
Difference_Calculator/: generate_diff.py  read_json_file.py
Difference_Calculator/scripts/: gendiff.py
gendiff/: __init__.py  generate_diff.py
gendiff/core/: diff_tree.py  generate_diff.py  parsers.py
gendiff/formatters/: __init__.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py  test_generate_diff_flat.py
