[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ivan <ivanrossi112@gmail.com>"]
readme = "README.md"
packages = [
  { include = "Difference_Calculator" },
]
[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
gendiff = "Difference_Calculator.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
